chore: add google site verification tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const currentYear = new Date().getFullYear();
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<meta name="description" content={description} />
+		<meta name="google-site-verification" content="p-TMFQiYQvWsK5Tn417NrhsVXZUOlO0riWjvgMm-zSI" />
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
