--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import Downloads from '../components/Downloads';
 ---
 
-<Layout title="Resources | Collin Wilkins">
+<Layout title="Free Resources & Guides | Collin Wilkins" description="Free downloadable guides on AI automation, agentic workflows, and engineering best practices. PDFs and templates for developers and tech leaders.">
 	<Downloads client:load />
 </Layout>
