--- a/src/pages/articles/[slug].astro
+++ b/src/pages/articles/[slug].astro
@@ -44,23 +44,50 @@ const pageDescription = frontmatter.meta_description || frontmatter.excerpt;
 // Article structured data for SEO
 const articleSchema = {
   "@context": "https://schema.org",
-  "@type": "Article",
-  "headline": frontmatter.title,
-  "description": pageDescription,
-  "datePublished": frontmatter.date,
-  "author": {
-    "@type": "Person",
-    "name": "Collin Wilkins",
-    "url": "https://collinwilkins.com/about"
-  },
-  "publisher": {
-    "@type": "Person",
-    "name": "Collin Wilkins"
-  },
-  "mainEntityOfPage": {
-    "@type": "WebPage",
-    "@id": `https://collinwilkins.com/articles/${slug}`
-  }
+  "@graph": [
+    {
+      "@type": "Article",
+      "headline": frontmatter.title,
+      "description": pageDescription,
+      "datePublished": frontmatter.date,
+      "dateModified": frontmatter.date,
+      "author": {
+        "@type": "Person",
+        "name": "Collin Wilkins",
+        "url": "https://collinwilkins.com/about"
+      },
+      "publisher": {
+        "@type": "Person",
+        "name": "Collin Wilkins"
+      },
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": `https://collinwilkins.com/articles/${slug}`
+      }
+    },
+    {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://collinwilkins.com"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Articles",
+          "item": "https://collinwilkins.com/articles"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": frontmatter.title
+        }
+      ]
+    }
+  ]
 };
 ---
 
