--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const {
 	schema
 } = Astro.props;
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const canonicalURL = new URL(Astro.url.pathname.toLowerCase(), Astro.site);
 const imageURL = new URL(image || '/images/og-default.png', Astro.site);
 
 const portfolioData = {
